# BeagleBoneBlue

./: .gitignore  README.md  arm-linux-gnueabihf.cmake  clone.sh  config.sh.in  deploy.sh  deploy.txt  make.sh
demoApp/: CMakeLists.txt  main.cpp
myApp/: CMakeLists.txt  HwConfigBBBlue.json  main.cpp
